public/css/baobab.less
/* ... */
/* Thread List View */

.search {
  .gradient(#FEFEFE, #F6F6F6);
  box-shadow: 0px 1px 1px rgba(0,0,0,0.05), #F6F6F6 0px 0px 2px inset;
  border-bottom: 1px solid #BBBBBB;
  padding:12px;
  padding-bottom:8px;
  position: fixed;
  top:0;
  left:75px;
  right:0;
  z-index:1;

  .compose-container {
    width:20%;
    display:inline-block;
    position: absolute;
    right: 0;
    padding-left:15px;
    box-sizing:border-box;

    &.ng-hide-remove {
      opacity: 0;
      -webkit-transition: opacity 250ms ease-out;
      transition: opacity 250ms ease-out;
      -webkit-transition-delay: 100ms;
      transition-delay: 100ms;
    }
    &.ng-hide-remove-active {
      opacity: 1;
    }
  }

  .input-inset-container {
    position: absolute;
    z-index:3;
    top:5px;
    right:5px;

    &.ng-hide-remove {
      opacity: 0;
      -webkit-transition: opacity 250ms ease-out;
      transition: opacity 250ms ease-out;
      -webkit-transition-delay: 250ms;
      transition-delay: 250ms;
    }
    &.ng-hide-remove-active {
      opacity: 1;
    }
  }

  .autocomplete {
    overflow:hidden;
    max-height: 0px;
    opacity:0;

    &.populated-add {
      transition: all 250ms ease-out;
      -webkit-transition-delay: 150ms;
      transition-delay: 150ms;
    }
    &.populated-remove {
      transition: all 250ms ease-out;
    }
    &.populated {
      max-height:300px;
      opacity:1;
    }
  }

  .token {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    display: inline-block;
    background-color: #ededed;
    white-space: nowrap;
    margin:4px;
    margin-right:0;
    padding:4px;
    padding-right: 8px;
    padding-left: 8px;
    line-height:22px;
    vertical-align: top;
    cursor: default;
    font-weight: 600;
    color:#333;
    span {
      font-weight:300;
      color:#666;
    }
  }
  .token:hover {
    border-color: #b9b9b9;
  }
  .token.active {
    border-color: #52a8ec;
    border-color: rgba(82, 168, 236, 0.8);
  }

  .typeahead {
    z-index:1;
    position:absolute;
    color:#ccc;
    background-color: white;
  }

  .search-field {
    width:80%;
    border-radius:3px; border:1px solid #aaa; box-sizing:border-box;
    overflow-x:hidden;
    white-space: nowrap;

    &.active {
      width:100%;
      border: 1px solid #00A8C8;
      outline: 0;
      box-shadow: 0px 0px 3px rgba(0,168,200,0.5), #F6F6F6 0px 0px 2px inset;
    }

    &.active-add {
      transition: all 250ms ease-out;
    }
    &.active-remove {
      transition: all 250ms ease-out;
    }
  }

  .search-field input {
    z-index:2;
    position:absolute;
    background-color: transparent;
    width:100%;
    font-size:16px; padding:8px;
    outline: 0;
    border:0;
  }

  .search-field input:focus {
    outline:0;
    border:0;
  }
}

.beneath-search {
  padding-top:75px;
}

.thread-list {
  line-height:1.3;

  &.bordered {
    border:1px solid #E1E1E1;
    border-bottom:1px solid #BBB;
    background-color: #FCFBFC;
  }

  .thread {
    display:block;
    box-sizing:border-box;
    position: relative;
    width:100%;
    font-size:14px;
    color:#757575;
    text-decoration: none;

    &:hover,
    &.active {
      background-color: rgba(0,0,0,0.1);
    }

    & > div {
      margin-top:1px;
      margin-bottom:1px;
      border-left:4px solid transparent;
    }

    & > div.unread {
      border-left:4px solid #0089D7;
    }

    & > div > div {
      margin-left:2px;
      margin-right:6px;
      border-bottom:1px solid rgba(0,0,0,0.07);
      padding:10px;
    }
    &:last-child > div > div {
      border-bottom: 0;
    }

    .participant-bubble {
      display: inline-block;
      border-radius:100%;
      background-color: green;
      height:26px;
      width:26px;
      margin-right:7px;
      margin-top:2px;
      float:left;
    }

    .participants {
      padding-top:6px;
      display: inline-block;
      overflow:hidden;
      text-overflow:ellipsis;
      white-space: nowrap;
      font-weight: bold;
      color:#333333;
      float:left;
      width:30%;
    }

    .snippet {
      padding-top:6px;
      padding-bottom:6px;
      overflow:hidden;
      text-overflow:ellipsis;
      white-space: nowrap;
      .subject {
        color:#333333;
      }
    }

    .date {
      padding-top:6px;
      float:right;
      display:inline-block;
      text-align: right;
      white-space: nowrap;
      vertical-align: top;
      color:#979797;
    }

    .actions {
      display:none;
      padding-top:4px;
      right:5px;
      position: absolute;
      text-align: right;
      z-index:2;
    }

    &:hover .actions {
      display:inline-block;
    }
  }

  &.autocomplete {
    .thread:hover,
    .thread.active {
      background-color: transparent;
      color: #00A8C8;
    }

    .thread:hover .participant-bubble,
    .thread.active .participant-bubble {
      box-shadow: 0px 0px 3px rgba(0,168,200,1);
    }

    .thread:hover .participants,
    .thread.active .participants {
      color: #00A8C8;
    }
  }
}

.lightbox {
  position: fixed;
  top:0;
  bottom:0;
  left:0;
  right:0;
  background-color: rgba(0,0,0,0.5);

  &.ng-hide-remove {
      transition: all 250ms ease-out;
      opacity: 0;
  }
  &.ng-hide-remove-active {
      opacity: 1;
  }
}


.lightbox-pane {
  background-color: white;
  margin:auto;
  position: fixed;
  top:50%;
  left:50%;
  min-width:250px;
  transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  -webkit-transform: translateX(-50%) translateY(-50%);
  text-align: center;
  img {
    max-width:100%;
    max-height:100%;
  }
  a {
    padding:15px;
    display:inline-block;
  }
}
/* ... */

